--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
+    line-height: 1.6;
+            margin: 20px;
+            background-image: url('[https://github.com/cjyyiii/cjy.github.io/blob/main/images/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20230630205759.jpg?raw=true]');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
 }
 
 header, nav, main, footer {
@@ -12,5 +15,4 @@ header, nav, main, footer {
 h1 {
     color: #007bff;
 }
-
-/* 继续添加其他样式 */
+/* 添加其他样式 */
